--- a/assets/index.html
+++ b/assets/index.html
@@ -19,5 +19,10 @@
       <li>galatasaray</li>
       <li>fenerbahçe</li>
     </ol>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dicta ullam
+      dignissimos eveniet ut eos at id amet, saepe dolor blanditiis fuga quae
+      officia error est fugiat, modi rerum voluptas.
+    </p>
   </body>
 </html>
